--- a/public/scss/about_us.scss
+++ b/public/scss/about_us.scss
@@ -1,7 +1,7 @@
 .about__wrapper {
-    margin: 150px 0 50px;
+    padding: 100px 0 50px;
     position: relative;
-    background-image: url('https://cdn.mos.cms.futurecdn.net/wtqqnkYDYi2ifsWZVW2MT4.jpg');
+    background-image: url('https://thelazysociety.com/wp-content/uploads/2020/02/cropped-beach-beautiful-color-idyllic-358358-1-1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
